--- a/app/src/main/res/layout/adapter_item_view.xml
+++ b/app/src/main/res/layout/adapter_item_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
-    tools:context=".MainActivity">
+    tools:context=".ActivityTask1">
 
     <TextView
         android:id="@+id/tvText"
@@ -15,16 +15,18 @@
         android:text="@string/let_s_start"
         android:visibility="visible" />
 
-    <androidx.appcompat.widget.AppCompatEditText
+    <com.eno.task1.widgets.CustomEditText
         android:id="@+id/edtValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:gravity="end"
-        android:hint="@string/enter_value"
+        android:hint="0.00"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:maxLength="4"
+        android:text="0.00"
+        android:textColor="@android:color/black"
         android:visibility="gone" />
 
     <Button
